versions/v0.21/modules/en/pages/operator/airgapped.adoc
= Air-gapped Environment
:description: Learn how SUSE Rancher Prime Cluster API supports air-gapped environments using CAPIProvider and CAPI Operator to manage Cluster API manifests
:revdate: 2026-06-26
:page-revdate: {revdate}

{product_name} provides support for an air-gapped environment out-of-the-box by leveraging features of the Cluster API Operator, the required dependency for installing {product_name}.

To provision and configure Cluster API providers, Turtles uses the *CAPIProvider* resource to allow managing Cluster API Operator manifests in a declarative way. Every field provided by the upstream CAPI Operator resource for the desired `spec.type` is also available in the `spec` of the *CAPIProvider* resource.

To install Cluster API providers in an air-gapped environment the following will need to be done:

ifeval::["{build-type}" == "product"]
. Configure the Cluster API Operator for an air-gapped environment:
 ** The operator chart will be fetched and stored as a part of the Turtles chart.
 ** Provide image overrides for the operator from an accessible image repository.
. Configure Cluster API providers for an air-gapped environment:
 ** Provide fetch configuration for each provider from an accessible location (e.g., an internal github/gitlab server) or from pre-created ConfigMaps within the cluster.
 ** Provide image overrides for each provider to pull images from an accessible image repository.
. Configure {product_name} for an air-gapped environment:
 ** Collect and publish {product_name} images and publish to the private registry. https://documentation.suse.com/cloudnative/rancher-manager/latest/en/installation-and-upgrade/other-installation-methods/air-gapped/publish-images.html#_2_collect_the_cert_manager_image[Example of cert-manager installation for the reference].
 ** Provide fetch configuration and image values for `core` and `caprke2` providers in xref:../operator/chart.adoc#_cluster_api_operator_values[values.yaml].
 ** Provider image value for the Cluster API Operator Helm chart dependency in https://github.com/kubernetes-sigs/cluster-api-operator/blob/main/hack/charts/cluster-api-operator/values.yaml#L26[values.yaml]. Image values specified with the cluster-api-operator key will be passed along to the Cluster API Operator.
endif::[]
ifeval::["{build-type}" == "community"]
. Configure the Cluster API Operator for an air-gapped environment:
 ** The operator chart will be fetched and stored as a part of the Turtles chart.
 ** Provide image overrides for the operator from an accessible image repository.
. Configure Cluster API providers for an air-gapped environment:
 ** Provide fetch configuration for each provider from an accessible location (e.g., an internal github/gitlab server) or from pre-created ConfigMaps within the cluster.
 ** Provide image overrides for each provider to pull images from an accessible image repository.
. Configure {product_name} for an air-gapped environment:
 ** Collect and publish {product_name} images and publish to the private registry. https://ranchermanager.docs.rancher.com/getting-started/installation-and-upgrade/other-installation-methods/air-gapped-helm-cli-install/publish-images#2-collect-the-cert-manager-image[Example of cert-manager installation for the reference].
 ** Provide fetch configuration and image values for `core` and `caprke2` providers in xref:../operator/chart.adoc#_cluster_api_operator_values[values.yaml].
 ** Provider image value for the Cluster API Operator Helm chart dependency in https://github.com/kubernetes-sigs/cluster-api-operator/blob/main/hack/charts/cluster-api-operator/values.yaml#L26[values.yaml]. Image values specified with the cluster-api-operator key will be passed along to the Cluster API Operator.
endif::[]

== CAPI Provider installation with OCI artifact

As an administrator working in an air-gapped environment, you need to fetch the Azure Cluster API Provider (CAPZ) components from within your cluster since external internet access is restricted. This section demonstrates how to deploy CAPZ using OCI artifacts stored in your private registry.

Set your private registry URL and replace with your actual registry:

[source,bash]
----
export REGISTRY=<YOUR_PRIVATE_REGISTRY>
export RELEASE_TAG=<CAPI_PROVIDER_VERSION>
----

Create and apply the Azure CAPIProvider resource that instructs {product_name} to fetch the Azure provider from your private OCI registry:

.capz-provider-oci.yaml
[source,yaml]
----
apiVersion: turtles-capi.cattle.io/v1alpha1
kind: CAPIProvider
metadata:
  name: azure
  namespace: capz-system
spec:
  type: infrastructure
  name: azure
  version: ${RELEASE_TAG}
  fetchConfig:
    oci: ${REGISTRY}:${RELEASE_TAG}
----

== How to mirror CAPI Provider OCI artifact

You can mirror OCI artifacts for any CAPI Provider listed in the {product_name} configuration: https://github.com/rancher/turtles/blob/main/internal/controllers/clusterctl/config-community.yaml.

Install the ORAS (OCI Registry As Storage) CLI tool to manage OCI artifacts. Follow the installation instructions at: https://oras.land/docs/installation.

Set your private registry URL and replace with your actual registry:

[source,bash]
----
export REGISTRY=<YOUR_PRIVATE_REGISTRY>
export RELEASE_TAG=<CAPI_PROVIDER_VERSION>
----

Create working directory:

[source,bash]
----
mkdir capi-oci-artifacts
cd capi-oci-artifacts
----

Pull OCI artifacts for the CAPI Provider which you want to use, for example, the Azure Provider OCI artifact in version 1.19.4:

[source,bash]
----
oras pull registry.rancher.com/rancher/cluster-api-azure-controller-components:v1.19.4
----

Publish an OCI artifact containing the Azure CAPI Provider manifests to your private registry:

[source,bash]
----
oras push ${REGISTRY}:${RELEASE_TAG} infrastructure-components.yaml:application/vnd.test.file metadata.yaml:application/vnd.test.file
----

Create and apply the Azure CAPIProvider resource that instructs {product_name} to fetch the Azure provider from your private OCI registry:

.capz-provider-oci.yaml
[source,yaml]
----
apiVersion: turtles-capi.cattle.io/v1alpha1
kind: CAPIProvider
metadata:
  name: azure
  namespace: capz-system
spec:
  type: infrastructure
  name: azure
  version: ${RELEASE_TAG}
  fetchConfig:
    oci: ${REGISTRY}:${RELEASE_TAG}
----

Use `kubectl` to create the namespace `capz-system` and apply the `capz-provider-oci.yaml` file to the cluster:

[source,bash]
----
kubectl apply -f capz-provider-oci.yaml
----

== CAPI Provider fetch and push OCI artifact

[tabs]
======
Using kubectl operator::
+
--
You can build OCI artifacts for any CAPI Provider listed in the {product_name} configuration: https://github.com/rancher/turtles/blob/main/internal/controllers/clusterctl/config-community.yaml

Install the https://cluster-api-operator.sigs.k8s.io/topics/plugin/installation[cluster-api-operator] plugin for `kubectl`.

Clone the official https://github.com/kubernetes-sigs/cluster-api-provider-azure/[Azure CAPI Provider repository] and navigate to the project directory.

[source,bash]
----
git clone https://github.com/kubernetes-sigs/cluster-api-provider-azure/
cd cluster-api-provider-azure
----

Choose the specific version you want to deploy. You can either list all available tags,

[CAUTION]
There is no `latest` version in OCI scenario, so version needs to be set at all times.

[source,bash]
----
git tag
----

or automatically select the latest release:

[source,console]
----
export RELEASE_TAG=`git describe --abbrev=0`
----

Set your private registry URL and replace with your actual registry:

[source,bash]
----
export PROD_REGISTRY=<YOUR_PRIVATE_REGISTRY>
----

Build the release artifacts infrastructure-components.yaml and metadata.yaml:

[source,bash]
----
make release
----

Go to the output directory containing the artifacts:

[source,bash]
----
cd out
----

Create and publish an OCI artifact containing the Azure CAPI Provider manifests to your private registry:

[source,bash]
----
kubectl operator publish -u ${PROD_REGISTRY}:${RELEASE_TAG} infrastructure-components.yaml metadata.yaml
----
--

Using Oras::
+
--
You can build OCI artifacts for any CAPI Provider listed in the {product_name} configuration: https://github.com/rancher/turtles/blob/main/internal/controllers/clusterctl/config-community.yaml

Clone the official https://github.com/kubernetes-sigs/cluster-api-provider-azure/[Azure CAPI Provider repository] and navigate to the project directory.

[source,bash]
----
git clone https://github.com/kubernetes-sigs/cluster-api-provider-azure/
cd cluster-api-provider-azure
----

Choose the specific version you want to deploy. You can either list all available tags,

[CAUTION]
There is no `latest` version in OCI scenario, so the version needs to be set at all times.

[source,bash]
----
git tag
----

or automatically select the latest release:

[source,console]
----
export RELEASE_TAG=`git describe --abbrev=0`
----

Set your private registry URL and replace with your actual registry:

[source,bash]
----
export PROD_REGISTRY=<YOUR_PRIVATE_REGISTRY>
----

Build the release artifacts infrastructure-components.yaml and metadata.yaml:

[source,bash]
----
make release
----

Go to the output directory containing the artifacts:

[source,bash]
----
cd out
----

Install the ORAS (OCI Registry As Storage) CLI tool to manage OCI artifacts. Follow the installation instructions at: https://oras.land/docs/installation

Create and publish an OCI artifact containing the Azure CAPI Provider manifests to your private registry:

[source,bash]
----
oras push ${PROD_REGISTRY}:${RELEASE_TAG} infrastructure-components.yaml:application/vnd.test.file metadata.yaml:application/vnd.test.file
----
--

======


Create and apply the Azure CAPIProvider resource that instructs {product_name} to fetch the Azure provider from your private OCI registry:

.capz-provider-oci.yaml
[source,yaml]
----
apiVersion: turtles-capi.cattle.io/v1alpha1
kind: CAPIProvider
metadata:
  name: azure
  namespace: capz-system
spec:
  type: infrastructure
  name: azure
  version: ${RELEASE_TAG}
  fetchConfig:
    oci: ${PROD_REGISTRY}:${RELEASE_TAG}
----

Use `kubectl` to create the namespace `capz-system` and apply the `capz-provider-oci.yaml` file to the cluster:

[source,bash]
----
kubectl apply -f capz-provider-oci.yaml
----

== CAPI Provider installation with fetched manifest

As an admin, I need to fetch the vSphere provider (CAPV) components from within the cluster because I am working in an air-gapped environment.

In this example, there is a ConfigMap in the `capv-system` namespace that defines the components and metadata of the provider. It can be created manually or by running the following commands:

[source,bash]
----
# Get the file contents from the GitHub release
curl -L https://github.com/rancher-sandbox/cluster-api-provider-vsphere/releases/download/v1.12.0/infrastructure-components.yaml -o components.yaml
curl -L https://github.com/rancher-sandbox/cluster-api-provider-vsphere/releases/download/v1.12.0/metadata.yaml -o metadata.yaml

# Create the configmap from the files
kubectl create configmap v1.12.0 --namespace=capv-system --from-file=components=components.yaml --from-file=metadata=metadata.yaml --dry-run=client -o yaml > configmap.yaml
----

This command example would need to be adapted to the provider and version you want to use. The resulting config map will look similar to the example below:

[source,yaml]
----
apiVersion: v1
kind: ConfigMap
metadata:
  labels:
    provider-components: vsphere
  name: v1.12.0
  namespace: capv-system
data:
  components: |
    # Components for v1.12.0 YAML go here
  metadata: |
    # Metadata information goes here
----

A *CAPIProvider* resource will need to be created to represent the vSphere infrastructure provider. It will need to be configured with a `fetchConfig`. The label selector allows the operator to determine the available versions of the vSphere provider and the Kubernetes resources that need to be deployed (i.e. contained within ConfigMaps which match the label selector).

Since the provider's version is marked as `v1.12.0`, the operator uses the components information from the ConfigMap with matching label to install the vSphere provider.

[source,yaml]
----
apiVersion: turtles-capi.cattle.io/v1alpha1
kind: CAPIProvider
metadata:
  name: vsphere
  namespace: capv-system
spec:
  name: vsphere
  type: infrastructure
  version: v1.12.0
  configSecret:
    name: vsphere-variables
  fetchConfig:
    selector:
      matchLabels:
        provider-components: vsphere
  deployment:
    containers:
    - name: manager
      imageUrl: "registry.suse.com/rancher/cluster-api-vsphere-controller:v1.12.0"
  variables:
    CLUSTER_TOPOLOGY: "true"
    EXP_CLUSTER_RESOURCE_SET: "true"
    EXP_MACHINE_POOL: "true"
----

Additionally the *CAPIProvider* overrides the container image to use for the provider using the `deployment.containers[].imageUrl` field. This allows the operator to pull the image from a registry within the air-gapped environment.

=== ConfigMap size limitations

There is a limit on the https://kubernetes.io/docs/concepts/configuration/configmap/#motivation[maximum size] of a ConfigMap - 1MiB. If the manifests do not fit into this size, Kubernetes will generate an error and provider installation fail. To avoid this, you can archive the manifests and put them in the ConfigMap that way.

For example, you have two files: `components.yaml` and `metadata.yaml`. To create a working config map you need:

. Archive components.yaml using `gzip` cli tool
+
[source,sh]
----
gzip -c components.yaml > components.gz
----
+
. Create a ConfigMap manifest from the archived data
+
[source,sh]
----
kubectl create configmap v1.12.0 --namespace=capv-system --from-file=components=components.gz --from-file=metadata=metadata.yaml --dry-run=client -o yaml > configmap.yaml
----
+
. Edit the file by adding "provider.cluster.x-k8s.io/compressed: true" annotation
+
[source,sh]
----
yq -y -i '.metadata.annotations["provider.cluster.x-k8s.io/compressed"] = "true"' configmap.yaml
----
+
NOTE: Without this annotation, the operator won't be able to determine if the data is compressed or not.

. Add labels that will be used to match the ConfigMap in `fetchConfig` section of the provider
+
[source,sh]
----
yq -y -i '.metadata.labels["my-label"] = "label-value"' configmap.yaml
----
+
. Create a ConfigMap in your Kubernetes cluster using kubectl
+
[source,sh]
----
kubectl create -f configmap.yaml
----
